--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,23 @@ html, body {
 	height: 100%;
 }
 
-.running {
-	pointer-events: none;
-}
-
-#reset {
-	position: absolute;
-	right: 5px;
-	top: 5px;
-}
-
 h1 {
 	margin: 20px;
 }
 
-main {
-	margin-top: 40px;
+nav {
+	overflow: hidden;
+}
+
+	nav button {
+		margin: 0 10px;
+	}
+
+header {
+	width: 100%;
+	font-size: 2rem;
+	text-align: center;
+	margin: 20px 0;
 }
 
 #board {
@@ -42,7 +43,7 @@ main {
 		border: 1px solid black;
 		cursor: pointer;
 		position: relative;
-		margin: -3px 0 0 -3px;
+		margin: -2px 0 0 -2px;
 	}
 
 	#board .f { background: #9FF59F; }
@@ -58,4 +59,30 @@ main {
 	#board .x, #board .o {
 		pointer-events: none;
 		cursor: none;
+	}
+
+	#board .adventurer {
+		opacity: 0.8;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 100%;
+		border: 1px black solid;
+		box-sizing: border-box;
+		z-index: 2;
+	}
+
+	#board .adventurer.dead {
+		opacity: 0.3;
+		z-index: 1;
+		width: 50%;
+		height: 50%;
+		margin: 25%;
+	}
+
+	#board .adventurer.best {
+		border: 5px black solid;
+		z-index: 3;
 	}
